test/negative/t2.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| axiom a2: 1 = true |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

(*@ axiom ... *)
File "t2.mli", line 11, characters 11-12:
Error: This term has type `integer' but a term was expected of type `bool'.
